# cpp

./: .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  LLVM.makefile  Makefile  Makefile.envs  README.md  WasiToolchain.cmake  docker-compose.yml  env.sh  native_clang.sh  packages.txt  pre-merge-wasi-commits.txt  requirements.txt  setup.py  versions.yml  wasi-libc.diff
.github/workflows/: build.yml  release.yml  tests.yml
docker/: cpp-sysroot.dockerfile  llvm.dockerfile  sysroot.dockerfile  toolchain.dockerfile
docs/: llvm.md  openmp.md  python.md  release.md  threading.md  upgrade-llvm.md  usage.md
emulator/: CMakeLists.txt  emulator.cpp
emulator/faasm/: emulator.h
examples/: CMakeLists.txt  native_exe.cpp  native_lib.cpp  native_lib.h
faasmtools/: __init__.py  build.py  compile_util.py  docker.py  endpoints.py  env.py  git.py  state.py
func/: CMakeLists.txt
func/demo/: CMakeLists.txt  brk.cpp  calloc.cpp  chain_named_a.cpp  chain_output.cpp  dummy.cpp  dynlink.cpp  echo.cpp  exception.cpp  ffmpeg_check.c  fibonacci.cpp  getcwd.cpp  getdents.cpp  gettime.cpp  hello.cpp  increment.cpp  malloc.cpp  mmap.cpp  mmap_big.cpp  munmap.cpp  pi.cpp  random_float.cpp  scale_check.cpp  shared_file.cpp  simd_check.cpp  snapshot_check.cpp  state_append.cpp  state_async.cpp  state_offset.cpp  state_shared_read.cpp  state_shared_read_offset.cpp  state_shared_write.cpp  state_shared_write_offset.cpp  stderr.cpp  stdout.cpp  string.cpp  threads_check.cpp  threads_local.cpp  threads_memory.cpp  time.cpp  (+4 more)
func/dynlink/: CMakeLists.txt
func/dynlink/include/: sharedHeader.h
func/dynlink/libA/: CMakeLists.txt  libA.c
func/dynlink/libB/: CMakeLists.txt
func/errors/: CMakeLists.txt  stackoverflow.cpp
func/ffmpeg/: CMakeLists.txt  check.cpp  encode.c  filter.c  hello.cpp  image_filtering.cpp  image_recognition.cpp  raw.cpp  raw_chained.cpp  transcode.cpp
func/mpi/: CMakeLists.txt  migrate.cpp  mpi_alltoallv.cpp  mpi_cartesian.cpp  mpi_isendrecv.cpp  mpi_long_alltoall.cpp  mpi_migration_allreduce.cpp  mpi_migration_barrier.cpp  mpi_pi.cpp  mpi_sendrecv.cpp
func/omp/: CMakeLists.txt  barrier_stress.cpp  complex_reduce.cpp  custom_reduce.cpp  default_shared.cpp  elastic_imagesim.cpp  for_static_schedule.cpp  header_api_support.cpp  hellomp.cpp  inspect_reduction.cpp  mem_stress.cpp  mt_pi.cpp  nested_levels_test.cpp  nested_parallel.cpp  omp_checks.cpp  omp_malloc.cpp  pi_faasm.cpp  pi_native.cpp  reduction_integral.cpp  repeated_reduce.cpp  repeated_reduce_sleep.cpp  setting_num_threads.cpp  simple_atomic.cpp  simple_barrier.cpp  simple_critical.cpp  simple_for.cpp  simple_master.cpp  simple_reduce.cpp  simple_single.cpp  single_thread_reduce.cpp  wtime.cpp
func/s3/: CMakeLists.txt  add_key_bytes.cpp  get_key_bytes.cpp  get_num_buckets.cpp  get_num_keys.cpp  list_buckets.cpp  list_keys.cpp  wc_driver.cpp  wc_mapper.cpp  wc_reducer.cpp  wc_splitter.cpp
func/tf/: CMakeLists.txt  image.cc  minimal.cpp
func/threads/: CMakeLists.txt
func/tless/: CMakeLists.txt  noop.cpp  noop_chain.cpp  post_tf.cpp  pre.cpp
func/tless/inference/: CMakeLists.txt  bitmap_helpers.cpp  get_top_n.h  get_top_n_impl.h  inference.cpp  inference.h
func/tless/transcode/: CMakeLists.txt  transcode_chain.cpp
libemscripten/: CMakeLists.txt  emscripten.c
libemscripten/faasm/: emscripten.h
libfaasm/: CMakeLists.txt  compare.cpp  core.cpp  counter.cpp  faasm.imports  files.cpp  input.cpp  libfaasm.imports  matrix.cpp  print.cpp  random.cpp  sgd.cpp  state.cpp  stubs.cpp  time.cpp  zygote.cpp
libfaasm/faasm/: array.h  compare.h  core.h  counter.h  faasm.h  files.h  host_interface.h  host_interface_test.h  input.h  matrix.h  memory.h  migrate.h  print.h  random.h  sgd.h  shared_mem.h  state.h  time.h
libfaasmp/: CMakeLists.txt  README.md  faasmp.imports  libfaasmp.imports  omp.h  z_Linux_asm.S  z_Linux_asm_csg.S
libfaasmp/faasmp/: faasmp.h  reduction.h
libfaasmpi/: CMakeLists.txt  faasmpi.cpp
patches/llvm-project/: 0001-Remove-__EMSCRIPTEN__-definitions-from-emscripten-ta.patch
patches/wasi-libc/: Faasm_switch_on_mman.patch
sysroot_extras/: dl.imports  libc.imports  libffi.imports
tasks/: __init__.py  clapack.py  container.py  dev.py  docker.py  eigen.py  env.py  examples.py  ffmpeg.py  format_code.py  func.py  git.py  imagemagick.py  install.py  kernels.py  lammps.py  lib.py  libc.py  libemscripten.py  libfaasm.py  libfaasmp.py  libfaasmpi.py  libfake.py  libffi.py  libpng.py  llvm.py  lulesh.py  tensorflow.py  zlib.py
tasks/util/: env.py
tests/: CMakeLists.txt  main.cpp  test_array.cpp  test_counter.cpp  test_emulator.cpp  test_files.cpp  test_input.cpp  test_matrix.cpp  test_random.cpp  test_sgd.cpp  utils.cpp  utils.h
